--- a/personal-site/src/pages/index.astro
+++ b/personal-site/src/pages/index.astro
@@ -14,7 +14,19 @@ import '../styles/global.css';
 	</style>
   </head>
   <body>
-	<div class="container">
+	  <div class="container">
+		<div class="mobile-menu">
+			<label class="hamburger-menu">
+				<input type="checkbox" />
+			</label>
+			<aside class="sidebar-mobile">
+				<nav class="mobile-links">
+					<a class="nav-bar" href="/">home</a>
+					<a class="nav-bar">projects</a>
+					<a class="nav-bar">blog</a>
+				</nav>
+			</aside>
+		</div>
 		<div class="header">
 			<a class="nav-bar" href="/">home</a>
 			<a class="nav-bar">projects</a>
@@ -37,7 +49,7 @@ import '../styles/global.css';
 		</div>
 		<div class="footer">
 			<p>2024. Icons by <a href="https://icons8.com/">Icons8</a></p>
-		</div>	
+		</div>
 	</div>
   </body>
 </html>
