--- a/personal-site/src/styles/global.css
+++ b/personal-site/src/styles/global.css
@@ -71,7 +71,7 @@
   .vl {
     border-right: 1px solid #583939;
     height: 38vh;
-    margin-right: 15px;
+    margin-right: 22px;
     margin-bottom: 16px;
   }
 
@@ -124,7 +124,9 @@
     }
 
     .content {
-      padding-top: 3rem;
+      display: flex;
+      flex-direction: column;
+      padding-top: 9rem;
       padding-left: 6rem;
       padding-right: 4rem;
     }
@@ -147,6 +149,8 @@
 
     .sidebar {
       text-align: center;
+      margin-top: auto;
+      margin-bottom: 1rem;
     }
 
     .mobile-icons {
@@ -165,6 +169,7 @@
 
     .footer {
       text-align: center;
+      margin-bottom: 4rem;
       /* margin-top: auto; */
     }
 
@@ -263,5 +268,10 @@
       display: flex;
       flex-direction: column;
       gap: 1rem;
+    }
+
+    .icon-container {
+      /* height: 60px;
+      width: 60px;; */
     }
   }
