--- a/personal-site/src/styles/global.css
+++ b/personal-site/src/styles/global.css
@@ -126,7 +126,7 @@
     .content {
       display: flex;
       flex-direction: column;
-      padding-top: 9rem;
+      padding-top: 8rem;
       padding-left: 6rem;
       padding-right: 4rem;
     }
@@ -169,16 +169,16 @@
 
     .footer {
       text-align: center;
-      margin-bottom: 4rem;
+      margin-bottom: 5rem;
       /* margin-top: auto; */
     }
 
     :root {
-      --bar-width: 30px;
+      --bar-width: 50px;
       --bar-height: 2px;
-      --hamburger-gap: 6px;
-      --foreground: #333;
-      --background: white; 
+      --hamburger-gap: 14px;
+      --foreground: #583939;
+      --background: #F28482; 
       --hamburger-margin: 8px;
       --animation-timing: 200ms ease-in-out;
       --hamburger-height: calc(var(--bar-height) * 3 + var(--hamburger-gap) * 2);
@@ -222,13 +222,13 @@
       top: var(--hamburger-margin);
       left: var(--hamburger-margin);
       z-index: 2;
-      padding-left: 1rem;
-      padding-top: 1rem;
+      padding-left: 3rem;
+      padding-top: 3rem;
     }
 
     .hamburger-menu:has(input:checked) {
-      --foreground: white;
-      --background: #333;
+      --foreground: #F7EDE2;
+      --background: #F28482;
     }
 
     .hamburger-menu:has(input:checked)::before {
@@ -253,9 +253,10 @@
       translate: -100%;
       padding: 0.5rem 1rem;
       padding-top: calc(var(--hamburger-height) + var(--hamburger-margin) + 1rem);
-      background-color: var(--foreground);
+      background-color: var(--background);
       color: var(--background);
-      max-width: 10rem;
+      /* max-width: 10rem; */
+      width: 65vw; 
       position: absolute;
       height: 100vh;
     }
@@ -267,11 +268,14 @@
     .mobile-links {
       display: flex;
       flex-direction: column;
-      gap: 1rem;
+      padding-top: 6rem;
+      padding-left: 2.5rem;
+      gap: 3rem;
     }
 
-    .icon-container {
-      /* height: 60px;
-      width: 60px;; */
+    .nav-bar {
+      font-weight: 600;
+      color: #F7EDE2;
+      font-size: large;
     }
   }
